# serial-shell-mcp

./: Cargo.toml  README.md  codex-config.txt  err.txt  out.hex  out.txt  out2.txt  req.txt  spec.md
src/: main.rs
